# KKORI

./: .gitignore  README.md  _core.pyi  package-lock.json
backend/: .gitignore  Dockerfile  _core.pyi  kkori.spec  korean_spell_checker.spec  main.py  pyproject.toml  requirements.prod.txt  requirements.txt
backend/assets/: bktree.py  build_dict_pickle.py  kkori-0.1.0-cp38-abi3-win_amd64.whl  korean_spell_checker-0.1.0-cp38-abi3-win_amd64.whl
backend/rust/src/: engine_interface.rs  lib.rs  py_types.rs  raw_searcher.rs  rule_checker_engine.rs
backend/scripts/: build.bat  build_app.bat  build_rust.bat  quick_launcher.pyw  run.bat  run_profile.bat  run_server.bat  run_test.bat  run_venv.bat
backend/src/: api.py
backend/src/configs/: spell_checker_config.py  spell_checker_config_builder.py  spell_checker_config_builder_parser.py  spell_checker_config_meaning.py  spell_checker_config_spacing.py  spell_checker_config_specific.py  spell_checker_config_spelling.py  spell_checker_config_warning.py
backend/src/engines/: raw_searcher.py  spell_checker.py
backend/src/models/: constants.py  interface.py  spell_checker_classes.py
backend/src/parsers/: base.py  csv_parser.py  excel_parser.py  srt_parser.py  txt_parser.py
backend/src/reporters/: html_reporter.py
backend/tests/: conftest.py  helpers.py  test_raw_string_searcher_default_config.py  test_spell_checker_builder.py  test_spell_checker_default_config.py  test_spell_checker_engine.py
rust/: Cargo.toml  korean_spell_checker-0.1.0-cp38-abi3-win_amd64.whl
rust/src/: engine_interface.rs  lib.rs  py_types.rs  raw_searcher.rs  rule_checker_engine.rs
utils/: file_io.py  (+1 more)
(+97 files in other folders)
