[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "KKORI"
version = "0.1.0"

[tool.setuptools.packages.find]
where = [".."]
include = ["KKORI*"]
exclude = ["KKORIO.venv*", "KKORI.tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = ["perf: 성능 측정 테스트"]
addopts = "-m 'not perf'"

[tool.pyright]
extraPaths = [".."]

[tool.maturin]
module-name = "_core"
features = ["pyo3/extension-module"]
manifest-path = "rust/Cargo.toml"